--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: linear-gradient(to right, #454545, #212121);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+    width: 450px;
+    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+    border-radius: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+    font-size: 2.3em;
+    text-align: center;
+    color: white;
+    padding-top: 0.7em;
 }
 
-.App-link {
-  color: #61dafb;
+.app .input-box {
+    width: 100%;
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-box div {
+    padding: 10px;
+    width: 100%;
+}
+
+select {
+    width: 100%;
+    padding: 0 10px;
+    height: 40px;
+    font-size: 1em;
+    cursor: pointer;
+    outline: none;
+    background: rgb(180, 180, 180);
+    border: none;
+    border-radius: 20px;
+    color: white;
+    margin: 0.2em 0;
+}
+
+input {
+    width: 100%;
+    height: 40px;
+    font-size: 1em;
+    margin: 0.2em 0;
+    border: none;
+    border-radius: 20px;
+    background: rgb(255, 255, 255);
+    outline: none;
+    padding: 0 1em;
+}
+
+.text {
+    color: rgb(180, 180, 180);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+}
+
+.error {
+    color: red;
+    background-color: white;
+    border-radius: 10px;
+    margin: 0.2em 0;
+    padding: 0 10px;
 }
